@@ -1,5 +1,5 @@
 
 ## a placeholder
 hello <- function(txt = "world") {
-    cat("Hello, ", txt, "\n")
+    cat("Hello, ", txt, "\n", sep = "")
 }
